added progmem upload

--- a/AsylumSocket/AsylumSocket.vcxproj.filters
+++ b/AsylumSocket/AsylumSocket.vcxproj.filters
@@ -22,6 +22,7 @@
     <None Include="AsylumSocket.ino" />
     <None Include="mqtt.ino" />
     <None Include="strip.ino" />
+    <None Include="html.ino" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.AsylumSocket.vsarduino.h">
