--- a/.gitignore
+++ b/.gitignore
@@ -259,4 +259,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/spiffs_old
+
+# Config and Release files
+*.json
+*.generic.bin
