--- a/AsylumSocket/AsylumSocket.vcxproj.filters
+++ b/AsylumSocket/AsylumSocket.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="src\Motor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\AnalogSensor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Socket.cpp">
@@ -68,6 +71,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Motor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\AnalogSensor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
