--- a/AsylumSocket/AsylumSocket.vcxproj
+++ b/AsylumSocket/AsylumSocket.vcxproj
@@ -127,25 +127,25 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\AnalogSensor.h" />
-    <ClInclude Include="src\Motor.h" />
-    <ClInclude Include="src\Encoder.h" />
+    <ClInclude Include="src\devices\AnalogSensor.h" />
+    <ClInclude Include="src\devices\Motor.h" />
+    <ClInclude Include="src\devices\Encoder.h" />
     <ClInclude Include="src\Config.h" />
     <ClInclude Include="src\Device.h" />
-    <ClInclude Include="src\Socket.h" />
-    <ClInclude Include="src\TouchT1.h" />
-    <ClInclude Include="src\Strip.h" />
+    <ClInclude Include="src\devices\Socket.h" />
+    <ClInclude Include="src\devices\TouchT1.h" />
+    <ClInclude Include="src\devices\Strip.h" />
     <ClInclude Include="__vm\.AsylumSocket.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\AnalogSensor.cpp" />
-    <ClCompile Include="src\Motor.cpp" />
-    <ClCompile Include="src\Encoder.cpp" />
+    <ClCompile Include="src\devices\AnalogSensor.cpp" />
+    <ClCompile Include="src\devices\Motor.cpp" />
+    <ClCompile Include="src\devices\Encoder.cpp" />
     <ClCompile Include="src\Config.cpp" />
     <ClCompile Include="src\Device.cpp" />
-    <ClCompile Include="src\Socket.cpp" />
-    <ClCompile Include="src\TouchT1.cpp" />
-    <ClCompile Include="src\Strip.cpp" />
+    <ClCompile Include="src\devices\Socket.cpp" />
+    <ClCompile Include="src\devices\TouchT1.cpp" />
+    <ClCompile Include="src\devices\Strip.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
